// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Controls separator align right 1`] = `
<div
  align="right"
>
  <button
    type="button"
  >
    anything
  </button>
  <button
    type="button"
  >
    everything
  </button>
</div>
`;

exports[`Controls separator render 1`] = `
<div
  align="left"
>
  <button
    type="button"
  >
    anything
  </button>
  <button
    type="button"
  >
    everything
  </button>
</div>
`;
